[package]
edition = "2021"
name = "misskey_gotoh"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
aho-corasick = "1.1.2"
napi = { version = "2.12.2", default-features = false, features = ["napi4"] }
napi-derive = "2.12.2"
zip = "0.6.6"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
